--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,16 @@
-title: Minimal theme
+title: <p align="center"> Sagarika Bhadra </p>
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+
+description:
+  <p align="center">
+  <a href="https://github.com/Sa2019Si">GitHub</a>
+  
+  
+  <br>   
+  I am working as a Automation Consultant in BFS Domain for 11 years
+  <br>
+  </p>
+
+
+
 theme: jekyll-theme-minimal
